# FADESim

./: .gitignore  LICENSE  README.md
crossbarHspice/: 2dArray.cc  2dArray.h  3dHArray.cc  3dHArray.h  3dVArray.cc  3dVArray.h  CMakeLists.txt  GenArray.cc  GenArray.h  LogicUnit.cc  LogicUnit.h  design.docx  fastmode_answer_check.cc  getIRAS-table.cc  ir_drop_fast_solver.h  main.cc
crossbarHspice/V2/: CMakeLists.txt  GenArray.cc  GenArray.h  LogicUnit.cc  LogicUnit.h  abstract_array.h  array_2d.h  assistant.h  command.h  concrete_command.h  main.cpp
crossbarHspice/examples/: example_config1  example_config2  example_config3  reram_mod.va  selector.va
crossbarHspice/tests/: SCN.py  check_iout.py  obtain_fastmode_iter.py  print_best_omega.py  test.py  test_acc.py  test_diff_fastmode.py
pimtorch/: .gitignore  download_database.sh
pimtorch/pimfixedpoint/: SCN.py  SCN_data_gen.py  VGG_cifar10_model.py  bnn_mnist.py  calculate_update.py  cifar10_ir_drop.py  crossbar_test.py  func_test.py  image_processing.py  mnist_ir_drop.py  mnist_model.py  naive_bayes.py  scientific_computing.py  scientific_computing_methods.py  trainCommon.py  train_cifar10.py  train_mnist.py
pimtorch/pimfixedpoint/fixedPoint/SplitArrCuda/: split_arr_matmul.cu
pimtorch/pimfixedpoint/fixedPoint/nn/: __init__.py  commonConst.py  conductance_variation.py  earlystopping.py  fixedPointArithmetic.py  ir_drop_compensate.py  ir_drop_solve.py  nn_warpper.py  splitArrayArithmetic.py
pimtorch/pimfixedpoint/fixedPoint/nn/modules/: __init__.py  binarized_conv.py  (+3 more)
pimtorch/pimfixedpoint/test_scn/: scn.py  sim_test.sh  simulation_test.py
